--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2.28
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
+drf-spectacular==0.29.0
 python-dotenv==1.2.1
 pytest==8.4.2
 pytest-django==4.11.1
